[Fix] New Model in API for Lists of Recipes (#13)
* New RecipeList Model
